--- a/app/src/main/res/layout/activity_country.xml
+++ b/app/src/main/res/layout/activity_country.xml
@@ -6,4 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".CountryActivity">
 
+    <GridView
+        android:id="@+id/gridView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:numColumns="2"
+        android:stretchMode="columnWidth"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:listSelector="@color/teal_200"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
