--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -14,6 +14,20 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Thêm video từ file..." />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_weight="0"
             android:orientation="horizontal">
@@ -32,12 +46,6 @@
                 android:layout_weight="5"
                 android:text="TextView" />
         </LinearLayout>
-
-        <VideoView
-            android:id="@+id/vidView"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="2" />
 
         <LinearLayout
             android:layout_width="match_parent"
